本地调试通过的版本

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -18,7 +18,8 @@
         "pages/application/application",
         "pages/hotList/hotList",
         "pages/addPost/addPost",
-        "pages/agreement/agreement"
+        "pages/agreement/agreement",
+        "pages/announcementHistory/announcementHistory"
     ],
     "window": {
         "backgroundColor": "@navBackgroundColor",
